# vim: set noexpandtab:

2012-07-16 Steve
	* Switched to using modifed version of cross section file in common code

2012-07-14 Steve
	* Corrected usage of get_electrons_signal
		* Does not affect the SusyNt production, only d3pd cutflow

2012-07-12 Steve
	* Updating GRL, apparently forgot to do so
	* Tagging SusyCommon-00-00-19

2012-07-10 Steve
	* Updated usage of overlap removal function from MultiLep
	* Mll > 12  applied for baseline selection in both analyses
	* Updated usgae of d3pd signal lepton selection
	* Added full cutflow counters up to ==3 leptons in the SusyNtMaker
		* These additional cuts are not really used to filter the ntuple,
		  but are just for checking cutflow on the d3pds
	* Added tile hot spot cut to the event cleaning
	* Removed the lar hole check from PASS_Event and from the cutflow counters
	* Added flag for turning off the SusyNt making, just for quicker cutflow comparison and testing
	* Fixed pileup weight filling for A-B3
	* Added unbiased impact parameters
	* Tagging SusyCommon-00-00-18

2012-07-09 Matt
	* Added updated medium++ and tight++ to SusyNtMaker. Maybe could make these functions to keep code clean?

2012-07-08 Steve
	* Tagging SusyCommon-00-00-17

2012-07-06 Matt
	* Default is to use jets with no scaling as noted here: https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/JetCalibrationToolsWinter2011 
	* Added to SusyD3PDAna: m_susyObj.SetJetCalib(false)
	
2012-07-06 Steve
	* Updated GRL and pileup files
	* Updated SUSY cross section file to 8TeV version
	* Fixed pileup weight usage for 1/fb
	* Updated to SUSYTools-00-01-02
	* Updated grid scripts, mcSamples, and dataSamples
	* Tagging SusyCommon-00-00-16

2012-07-05 Matt
	* Added two lepton triggers: EF_e12Tvh_loose1 and EF_mu13 following todays DiLepton trigger talk
	
2012-07-03 Steve
	* Added muon thetaPV, requested by Anyes (might not be needed)
	* Adding additional isolation variables
		* ptcone30
		* etcone30Corr
		* etcone30TopoCorr