@@ -2,6 +2,9 @@
 
 2012-07-16 Steve
 	* Switched to using modifed version of cross section file in common code
+	* Added additional cutflow counters and event checksto the SusyNtMaker so that one
+	  can use it to produce a cutflow.
+	  	* Does not change the filtering at all
 
 2012-07-14 Steve
 	* Corrected usage of get_electrons_signal
